Updated redirect link

--- a/404.html
+++ b/404.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <noscript><meta http-equiv="refresh" content="0; url='https://website.jsmon.vercel.app/'" /></noscript>
+        <noscript>
+            <meta http-equiv="refresh" content="0; url='https://jsmon.vercel.app/'" />
+        </noscript>
         <script>
-            window.location.replace(`https://website.jsmon.vercel.app${window.location.pathname}`);
+            window.location.replace(`https://jsmon.vercel.app${window.location.pathname}`);
         </script>
+        <title>Redirecting...</title>
     </head>
+    <body>
+        <p>Redirecting...</p>
+    </body>
 </html>
