Updated redirect link

--- a/404.html
+++ b/404.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <noscript>
-            <meta http-equiv="refresh" content="0; url='https://jsmon.vercel.app/'" />
+            <meta http-equiv="refresh" content="0; url='https://jsmon.dev/'" />
         </noscript>
         <script>
-            window.location.replace(`https://jsmon.vercel.app${window.location.pathname}`);
+            window.location.replace(`https://jsmon.dev${window.location.pathname}`);
         </script>
         <title>Redirecting...</title>
     </head>
