--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="refresh" content="0; url='https://jsmon.vercel.app/'" />
+        <meta http-equiv="refresh" content="0; url='https://jsmon.dev/'" />
         <title>Redirecting...</title>
     </head>
     <body>
